# Byteforge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  turbo_mode.rs
src/: entropy.rs  inference.rs  lib.rs  main.rs  optimized_entropy.rs  optimized_patching.rs  patching.rs  simple_benchmark.rs  training.rs  transformer.rs  turbo_benchmark.rs  utils.rs
